welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: 'while' expected but '}' found.
} 
^Poucet:7: error: 'while' expected but '}' found.
	}
        ^