welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
do {
  do {
    var nbbaggles:Int =0
  }
}